# AdventOfCode

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  requirements.txt
2024/: 01.py  02.py  03.py  04.py  05.py  06.py  07.py  08.py  09.py  10.py  11.py  12.py  13.py  14.py  15.py  16.py  16_with_visual.py  17.py  18.py  19.py  20.py  21.py  22.py  23.py  24.py  25.py
utils/: download_data.py
year_2019/: 01.py  02.py  intcode.py  year_2019_day_02.py  year_2019_day_03.py  year_2019_day_04.py  year_2019_day_05.py  year_2019_day_06.py  year_2019_day_07.py  year_2019_day_08.py  year_2019_day_09.py  year_2019_day_10.py  year_2019_day_11.py  year_2019_day_12.py  year_2019_day_13.py  year_2019_day_14.py  year_2019_day_15.py  year_2019_day_16.py  year_2019_day_17.py  year_2019_day_18.py  year_2019_day_19.py  year_2019_day_20.py  year_2019_day_21.py  year_2019_day_22.py
year_2019/tests/: test_year2019day02.py  test_year2019day03.py  test_year2019day04.py  test_year2019day05.py  test_year2019day06.py  test_year2019day07.py  test_year2019day08.py  test_year2019day09.py  test_year2019day10.py  test_year2019day12.py  test_year2019day14.py  test_year2019day16.py  test_year2019day18.py  test_year2019day20.py  test_year2019day22.py
year_2024/: 01.py  02.py  03.py  04.py  05.py  06.py  07.py  08.py  09.py  10.py  11.py  12.py  13.py  14.py  15.py  16.py  16_with_visual.py  17.py  18.py  19.py  20.py  21.py  22.py  23.py  24.py  25.py
