[project]
name = "adventofcode"
version = "0.1.0"
description = "https://adventofcode.com/"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "python-dotenv>=1.0.1",
    "requests>=2.32.3",
]

[tool.ruff.format]
quote-style = "single"

[tool.ruff]
lint.select = ["E", "F", "B", "I", "SIM",]
exclude = ["settings.py","migrations"]
line-length = 79

[tool.mypy]
exclude= ['^year_2024/', '^2024/']
strict = true
ignore_missing_imports = true
disallow_untyped_decorators = false
disable_error_code = ["import-untyped"]

[dependency-groups]
dev = [
    "pytest>=8.3.4",
    "types-requests>=2.32.0.20241016",
]
